test/tests/compiler/7_compound_statements/valid/declaration_only.plx



pub fn main(none) i32 {
    a: i32;
    {
        b: i32 = a = 1
    }
    return a
}
