test/tests/compiler/7_compound_statements/invalid_parse/ternary_blocks.plx
pub fn main(none) i32 {
    a: i32;
    return ? 1 then { 
        a = 2
    }
    else a = 4
}
